Use devicenut email.

--- a/library.properties
+++ b/library.properties
@@ -1,7 +1,7 @@
 name=BluefruitStrs
-version=1.0
-author=Adafruit and PixelNut
-maintainer=<info@pixelnut.io>
+version=1.1
+author=Adafruit and Devicenut
+maintainer=<gdv@devicenut.com>
 sentence=Custom Interface to Adafruit's Bluefruit module.
 paragraph=Use to read/write strings to/from the device.
 category=Communication
